@@ -3,6 +3,7 @@
 	* src/Rule.cs:  Fiks kompileringsfeil i forslaget til Trond
 	* src/Table.cs: Legg inn int[,] tabellar og metodar/properties for å bruke
 									dei.
+	* Legg inn funksjon for å toggle ei celle i tabellen.
 
 2010-01-15 Trond K.	Homestad <tkhmandal@hotmail.com>
 
